--- a/package.json
+++ b/package.json
@@ -152,6 +152,7 @@
     "glob": "^13.0.0",
     "graphql": "^16.10.0",
     "husky": "^9.1.6",
+    "jsdom": "^27.4.0",
     "knip": "^5.66.0",
     "lint-staged": "^16.2.7",
     "nyc": "^17.1.0",
